Fixed alignment of elems

--- a/frontend/src/MainLandingPage/LandingStyling.scss
+++ b/frontend/src/MainLandingPage/LandingStyling.scss
@@ -5,3 +5,7 @@
   padding: 0;
   margin: 0;
 }
+.landingGrid{
+  background-color: lightgrey ;
+
+}
