--- a/frontend/src/Portfolio/Holdings/holdingsstyling.scss
+++ b/frontend/src/Portfolio/Holdings/holdingsstyling.scss
@@ -1,5 +1,6 @@
 .holdings{
+  border-radius: 15px !important;
   margin-top: 1em;
-  width: 48%;
-  float: right;
+  width: inherit;
+
 }
