--- a/frontend/src/Watchlist/watchliststyling.scss
+++ b/frontend/src/Watchlist/watchliststyling.scss
@@ -1,6 +1,4 @@
 .watchlist{
   border-radius: 15px !important;
-
   margin-top: 1em;
-  width : 50%;
 }
